# ginext

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PLAN-remove-abi-profile.md  README.md  conftest.py  conftest_shared.py  dbus_fixtures.py  i686-linux.ini  meson.build  meson.options  mkdocs.yml  native-win-arm64.ini  pyproject.toml  ruff-license.toml  vcpkg-configuration.json  vcpkg.json
examples/commander/: pyproject.toml
examples/commander/src/commander/: __init__.py  __main__.py  app.py
src/: conftest_shared.py  dbus_fixtures.py  meson.build  testhelper.py
src/ginext/: GIRepository.pyi  GObject.py  GObject.pyi  __init__.py  __init__.pyi  _aioloop.py  abi.py  aio.py  cairo.py  classbuild.py  defaults.py  enum.py  errors.py  features.py  fundamental.py  method.py  mypy_plugin.py  namespace.py  record.py  runtime.py  signature.py
src/ginext/_overlays/: GIRepository.py  GLib.py  GObject.py  __init__.py
src/ginext/gobject/: __init__.py  gobjectclass.py  gtype.py  metaclass.py  properties.py  resolve.py  subclass.py
src/ginext/overlay/: __init__.py  bootstrap.py  callbacks.py  install.py  registrar.py  state.py  types.py
src/ginext/private/: __init__.py  __init__.pyi  _cairo.c  _gobject.pyi  callable_descriptor.c  common.h  gimeta-helpers.h  ginextmodule.c  namespace.c
src/ginext/private/GIRepository/: ArgInfo.c  BaseInfo.c  BaseInfo.h  CallableInfo.c  CallableInfo.h  CallbackInfo.c  ConstantInfo.c  ConstantInfo.h  EnumInfo.c  EnumInfo.h  FieldInfo.c  FlagsInfo.c  FunctionInfo.c  Info.c  Info.h  InterfaceInfo.c  ObjectInfo.c  ObjectInfo.h  PropertyInfo.c  RegisteredTypeInfo.c  Repository.c  SignalInfo.c  StructInfo.c  StructInfo.h  TypeInfo.c  UnionInfo.c  UnresolvedInfo.c  VFuncInfo.c  ValueInfo.c
src/ginext/private/GLib/: Array.c  Array.h  DateTime.c  DateTime.h  Error.h  HashTable.c  HashTable.h  List.c  List.h  Regex.c  Regex.h  Variant.c  Variant.h
src/ginext/private/GObject/: Boxed.c  Boxed.h  Closure-callback.c  Closure-record.c  Closure-record.h  Closure-signal.c  Closure.h  DeclaredProperty.c  DeclaredProperty.h  Fundamental.c  Fundamental.h  GIMeta.c  GIMeta.h  Object-class.c  Object-class.h  Object-construct.c  Object-info.c  Object-info.h  Object-property.c  Object-register.c  Object-register.h  Object-unref.c  Object-vfunc-wrapper.c  Object-vfunc-wrapper.h  Object-vfunc.c  Object-vfunc.h  Object-weakref.c  Object-weakref.h  Object-wrapper.c  Object.h  ObjectMeta.c  ObjectMeta.h  ParamSpec-make.c  ParamSpec-make.h  ParamSpec.h  Type-name.c  Type-name.h  Type.c  Value.c  Value.h  (+11 more)
src/ginext/private/cairo/: foreign-internal.h  foreign.c  foreign.h
src/ginext/private/invoke/: arg-cleanup.c  arg-cleanup.h  bind.c  bind.h  frame.c  frame.h  plan.c  plan.h  return.c  return.h
src/ginext/private/jit/: jit.h
src/ginext/private/marshal/: c-array.c  c-array.h  container-element.c  container-element.h  conversion.c  conversion.h  enum.c  enum.h  gvalue.c  gvalue.h  marshal.c  marshal.h  pygi-value.c  pygi-value.h  scalar-tags.h  scalar.c  scalar.h  string.c  string.h
src/ginext/private/runtime/: callable.c  callable.h  class-registry.h  module_funcs.h  shims.c  signal-api.c  type-info.h
src/ginext/private/win32/: dlfcn.c  dlfcn.h  win32-compat.h
src/ginext/signal/: __init__.py  adapt.py  bound.py  connection.py  descriptor.py  emission_hook.py  gtype.py  scoped.py
src/ginext/tests/: README.md  TODO.md  __init__.py  conftest.py  gi_test_utils.py  test_signature.py  wayland_fixture.py
src/ginext/tests/boxed/: test_boxed.py  test_boxed_field_array.py  test_boxed_resource.py
src/ginext/tests/cairo/: test_foreign_backlog.py
src/ginext/tests/classbuild/: test_base_via_namespace.py  test_callable_metadata.py  test_class_caching.py  test_class_creation.py  test_managed_dict_store_attr.py  test_method_objclass.py  test_parent_inheritance.py  test_prepare.py  test_subclass_gtype_compat.py  test_subclass_with_gobject_class_attr.py
src/ginext/tests/closure/: test_gclosure_argument.py  test_ownership_invariants.py  test_smoke.py
src/ginext/tests/constructor/: test_abstract_type_rejection.py  test_kwargs_construction.py
src/ginext/tests/defaults/: test_app_selection.py  test_env_versions_override.py  test_gidefaults_discovery.py  test_highest_installed_fallback.py  test_resolution_order.py  test_suffixed_imports.py
src/ginext/tests/enum/: test_enum_methods.py  test_python_defined_enum_flags.py
src/ginext/tests/features/: __init__.py  test_feature_flags.py
src/ginext/tests/free_threading/: support.py  test_c_caches.py  test_import_state.py  test_python_caches.py  test_signal_lifecycle.py  test_wrapper_identity.py
src/ginext/tests/glib/: test_bytes.py  test_constants.py  test_core.py  test_datetime.py  test_error.py  test_log_set_writer_func.py  test_regex.py  test_unichar.py  test_variant_compat.py
src/ginext/tests/gobject/: test_GObject_Object.py  test_GObject_Object_vfunc.py  test_GObject_Type.py  test_gtype_constants.py  test_gtype_marshal.py  test_inheritance.py  test_object_api.py  test_object_lifecycle.py  test_paramspec_introspection_backlog.py  test_pointer_property_safety.py  test_registration.py  test_type_functions.py
src/ginext/tests/integration/: test_caches_layer_wide.py  test_first_vertical_slice.py  test_girepository_overlay.py  test_runtime_smoke.py  test_terminal_activation.py  test_web_browser_extensions.py
src/ginext/tests/inventory/: __init__.py  _unsupported_argument_args.json  test_core_namespace_inventory.py  test_unsupported_argument_args.py
src/ginext/tests/invoke/: test_argchecks_gimarshalling.py  test_descriptor_build_rejection.py  test_enum_flags.py  test_filename_string.py  test_float.py  test_gee_callback_triples.py  test_int.py  test_keyword_args.py  test_nullable_args.py  test_pyargs_oracle.py  test_return_type_shapes.py  test_strv_array.py  test_utf8_string.py
src/ginext/tests/method/: test_static_method.py
src/ginext/tests/namespace/: test_attribute_gateway.py  test_cairo_alias.py  test_first_access.py  test_lazy_namespace_jit.py  test_public_surface.py  (+4 more)
(+447 files in other folders)
